Implementation of creating necessary folders

--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,7 @@ dmypy.json
 
 # Imagens Folder
 LuzBranca_Cima
-folha_extraida
-imagens_auxiliares
+extract_leaf
+aux_image
 image_first_cut
 image_second_cut
